# rag-test-task

./: .gitignore  README.MD  TEST_RESULTS.md  app.py  desc.txt  pyproject.toml  test_agent.py
data/: Clients.xlsx  InvoiceLineItems.xlsx  Invoices.xlsx
src/: __init__.py
src/agent/: __init__.py  chat_agent.py
src/config/: settings.py
src/dataloaders/: __init__.py  excel_loader.py
src/llm/: __init__.py  client.py  prompt.py
src/rag_invoice_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/shared/: errors.py  logger.py  shared_types.py
src/tools/: __init__.py  code_executor.py
